Hooking up data to related moments view.

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -954,13 +954,13 @@ body.transition .moment
 
 // !Related moments
 
-.related-filter
-  padding: 5px 10px
+.related-filter-header
+  padding: 6px 6px 6px 10px
   +border-radius(4px)
   background-color: #ccc
   margin-bottom: 10px
 
-  button
+  .return-to-reader
     float: right
 
   ul
