--- a/app/views/shared/_js_templates.html.haml
+++ b/app/views/shared/_js_templates.html.haml
@@ -99,7 +99,7 @@
               = t('notes.form.save button')
 
   %script#pane-related-tmpl{type:"text/x-handlebars-template"}
-    %dt.related.disabled
+    %dt.related
       %span.count
 
   %script#pane-close-tmpl{type:"text/x-handlebars-template"}
