--- a/app/views/moments/_cards.html.haml
+++ b/app/views/moments/_cards.html.haml
@@ -6,3 +6,6 @@
 - unless moments.blank?
   - moments.each do |moment|
     = render partial: moment.moment_partial_path, locals: {moment: moment, comments_displayed: comments_displayed}
+- else
+  .moments-none
+    %p No moments found
