--- a/app/views/references/_reader_header.html.haml
+++ b/app/views/references/_reader_header.html.haml
@@ -11,6 +11,7 @@
       %a.submenu_btn.highlight_btn{href: 'javascript:void(0);'}
       %a.submenu_btn.bookmark_btn{href: 'javascript:void(0);', "data-action" => bookmarks_path, "data-method" => 'POST'}
       %a.submenu_btn.note_btn{href: 'javascript:void(0);', "data-action" => new_note_path, "data-method" => 'GET'}
+      %a.submenu_btn.related_btn{href: 'javascript:void(0);'}
       %a.submenu_btn.share_btn{href: 'javascript:void(0);', "data-action" => new_share_path, "data-method" => 'GET'}
     %div.close_tab
       %span.first
