--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -274,12 +274,12 @@ div.close_tab
   overflow: hidden
 
 .verse_toolbar nav a, .share_toolbar nav a
-  margin: 5px 2% 0
+  margin: 5px 1% 0
   text-indent: -99999px
   overflow: hidden
   display: inline-block
   height: 30px
-  width: 28%
+  width: 20%
   padding: 0px
   +border-radius(4px)
   border-bottom: 2px solid #000
@@ -315,6 +315,9 @@ div.close_tab
 
 .verse_toolbar nav a.note_btn
   background-position: center -94px
+
+.verse_toolbar nav a.related_btn
+  background-position: center -225px
 
 .verse_toolbar nav a.share_btn
   background-position: center -138px
