--- a/app/views/moments/related.html.haml
+++ b/app/views/moments/related.html.haml
@@ -8,7 +8,7 @@
     - #%li 
     - #  %a{:class => "active", :href =>"#"}Mine
 
-.social-feed-wrap
+.social-feed-wrap.related
   .social-feed
     = render partial: "moments/cards", locals: {moments: @moments, comments_displayed: true}
 
