Update from feedback
-Remove c.logs
-Squashed bugs
-Highlight -> Active
-Localize Strings

--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -479,18 +479,17 @@
   margin-bottom: 8px
   line-height: 18px
 
-#menu_verse_actions #share-pane .share_action
-  clear: both
-  margin-top: 8px
-
 #menu_verse_actions #share-pane .share_services
   overflow: hidden
   margin-top: 10px
 
 #menu_verse_actions #share-pane .share_action
+  clear: both
+  margin-top: 8px
   float: none
   margin-bottom: 20px
   & button
+    color: #ffffff
     font-size: 15px
     font-weight: 500
     letter-spacing: 0.30px
@@ -523,11 +522,10 @@
   & span::-moz-selection
     background: transparent
     cursor: default
-  &.share_highlight
+  &.network_active
     background-color: #e5e5e5
     &:hover
       background-color: #cdcdcd
-
 
 #menu_verse_actions #share-pane .share_services span:first-child
   margin-left: 0
