--- a/app/views/shared/_js_templates.html.haml
+++ b/app/views/shared/_js_templates.html.haml
@@ -141,23 +141,23 @@
               </span>
             </div>
             <div class="share_services">
-              <span id="share_twitter" class="share_button share_highlight">
-                <input id="checkbox_share_twitter" type="checkbox" name="share[connections][twitter]" checked="true"/>
+              <span id="share_twitter" class="share_button">
+                <input id="checkbox_share_twitter" type="checkbox" name="share[connections][twitter]" />
                 <span class="share_verse_twitter">
                   #{t("twitter")}
                 </span>
               </span>
-              <span id="share_facebook" class="share_button share_highlight">
-                <input id="checkbox_share_facebook" type="checkbox" name="share[connections][facebook]" checked="true"/>
+              <span id="share_facebook" class="share_button">
+                <input id="checkbox_share_facebook" type="checkbox" name="share[connections][facebook]" />
                 <span class="share_verse_facebook">
                   #{t("Facebook")}
                 </span>
               </span>
             </div>
-            <div class="share_errors">
+            <div class="share_errors" data-error-none-checked="Please select at least one social network" data-error-character-limit="Please delete some characters or choose a different social network">
             </div>
             <div class="share_action">
-              <button id="share_action_submit" type="submit" name="share[submit]" value="submit" class="action_button_green">
+              <button id="share_action_submit" type="submit" name="share[submit]" value="submit" class="">
                 #{t('ref.share now')}
               </button>
             </div>
