--- a/app/views/highlights/show.html.haml
+++ b/app/views/highlights/show.html.haml
@@ -1,7 +1,7 @@
 - @title = @highlight.moment_title
 
 - content_for :sidebar do
-  = render partial: "/comments/sidebar_form", locals: {moment: @highlight}
-  
+  = render partial: "moments/activity_sidebar", locals: {moment: @highlight}
+
 %article.social-detail
   = render partial: "moments/highlight", locals: {moment: @highlight, comments_displayed: true, detail_view: true}
