--- a/app/views/moments/_daily_verse.html.haml
+++ b/app/views/moments/_daily_verse.html.haml
@@ -30,15 +30,7 @@
               = version.abbreviation.upcase
 
   .moment-btm
-    .moment-actions
+    .moment-actions.vod
       %span.moment-actions-share
         %a{href:"#", title: t("moments.action.share title")}
           = t("moments.action.share")
-      .moment-actions-share-box
-        %span.moment-actions-share-arrow
-          &nbsp;
-        %div
-          %a{href:"#", title: "Share this on Facebook", class: "moment-actions-share-facebook"}
-            Facebook
-          %a{href:"#", title: "Share this on Twitter", class: "moment-actions-share-twitter"}
-            Twitter
