adjust drop shadow, width mods mobile vs desktop

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -90,7 +90,7 @@ body.transition .moment
 
 .moment-actions .moment-actions-share-box
   position: absolute
-  width: 97%
+  width: auto
   top: 27px
   left: 6px
   z-index: 1
@@ -161,7 +161,8 @@ body.transition .moment
     +border-radius(4px)
     background-color: #fff
     border: 1px solid #DEDDDB
-    +box-shadow(rgba(#605c53, 0.4) 0 10px 10px 0)
+    +box-shadow(0 3px 8px #666)
+    padding-right: 15px
 
 .moment-actions-share-facebook,
 .moment-actions-share-twitter
