--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -67,8 +67,21 @@
 // !Moment badge positioning
 
 
-// !Moment common code
+// !Share comment like etc.
 
+.moment-actions .moment-actions-share-box
+  width: 97%
+
+.moment-actions-share-box div
+  padding: 0
+
+  span
+    display: inline-block
+    width: 48%
+    text-align: center
+
+  span:first-child
+    border-right: 1px solid #dedddb
 
 // !Bookmark, reading plan, download, and group moments -- they share the same layout
 
