--- a/app/views/shared/_js_templates.html.haml
+++ b/app/views/shared/_js_templates.html.haml
@@ -310,7 +310,9 @@
     %span.moment-actions-share-arrow
       &nbsp;
     %div
-      %a{href:"#", title: "Share this on Facebook", class: "moment-actions-share-facebook"}
-        Facebook
-      %a{href:"#", title: "Share this on Twitter", class: "moment-actions-share-twitter"}
-        Twitter
+      %span
+        %a{href:"#", title: "Share this on Facebook", class: "moment-actions-share-facebook"}
+          Facebook
+      %span    
+        %a{href:"#", title: "Share this on Twitter", class: "moment-actions-share-twitter"}
+          Twitter
