--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -69,13 +69,13 @@ body.transition .moment
   margin: 0 15px 0 0
 
 .moment-content-actions-delete
-  background: image-url("edit-delete-sprite.png") no-repeat -65px 0
+  background: image-url("edit-delete-sprite.png") no-repeat 0px -69px
 
 .moment-content-actions-edit:hover
   background-position: 1px -35px
 
 .moment-content-actions-delete:hover
-  background-position: -65px -35px
+  background-position: 0px -104px
 
 
 // !Share comment like etc.
