Minor tweak for timeline sidebar.

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -892,7 +892,8 @@ body.transition .moment
 
     a.user
       margin-left: 10px
-      line-height: 26px
+      line-height: 30px
+      font-size: 15px
 
 .moment-activity
   .bd
