--- a/app/assets/stylesheets/_modal_window.sass
+++ b/app/assets/stylesheets/_modal_window.sass
@@ -214,20 +214,14 @@
   padding-right: 5px
 
 .share_verse_twitter
-  background: image-url("share_twitter_logo.png")
-  text-indent: -30000px
-  width: 65px
-  height: 13px
+  text-indent: 100%
+  white-space: nowrap
+  overflow: hidden
   display: block
-  float: left
-  margin-top: 8px
 
 .share_verse_facebook
-  background: image-url("share_facebook_logo.png")
-  text-indent: -30000px
-  width: 65px
-  height: 13px
+  text-indent: 100%
+  white-space: nowrap
+  overflow: hidden
   display: block
-  float: left
-  margin-top: 8px
 
