--- a/app/views/widgets/_my_plans.html.haml
+++ b/app/views/widgets/_my_plans.html.haml
@@ -1,10 +1,16 @@
+- subscriptions = Subscription.all(current_user)
+
 .widget
   %h3.hd
     %span
       My Plans
   .bd
     %ul
-      %li Subscribed Plan 1
-      %li Subscribed Plan 2
-      %li Subscribed Plan 3
-      %li View All
+      - subscriptions.each do |sub|
+        %li
+          %h3= sub.name
+          %p
+            = link_to("Start reading", subscription_path(user_id: current_user, id: sub))\
+            %span= t("plans.current progress html", day: sub.current_day, total_days: sub.total_days).html_safe
+  .ft
+    = link_to("View My Plans", subscriptions_path(user_id: current_user))
