--- a/app/views/widgets/_find_friends.html.haml
+++ b/app/views/widgets/_find_friends.html.haml
@@ -1,6 +1,9 @@
-.widget
+.widget.widget-find-friends
   %h3.hd
     %span
       Find Friends
   .bd
-    Coming soon ...
+    - # Sidebar User Search
+    %form.sb-user-search{action: search_path(category: :users), method: "GET"}
+    %input.sb-user-search-query{type: "text", name: "q", placeholder: "Search by name"}
+    %input.sb-user-search-submit{type: "submit", value: "Go"}
