Styled up some of the sidebar widgets in the reader

--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -567,3 +567,44 @@ html.mobile-client
     border-color: #000 !important
     margin-top: 10px
     box-shadow: inset rgba(255, 255, 255, 0.3) 0 2px 0 0, inset rgba(0, 0, 0, 0.15) 0 -2px 0 0
+
+// !Featured/My plans widget
+
+.widget .featured-plans,
+.widget .my-plans
+  background-color: #fff
+
+  li
+    padding: 15px
+    border-top: 1px solid #cdcdcd
+    border-bottom: none
+
+    h3
+      line-height: 1.2em
+      margin: 0 0 5px
+
+    p
+      line-height: 1.4em
+      margin: 0
+
+    span
+      display: inline-block
+      margin: 0 0 0 10px
+      color: #777
+
+  li:first-child
+    border: none
+
+// !Find friends widget
+
+.widget-find-friends
+
+  .bd
+    padding: 10px
+
+  .sb-user-search-query
+    width: 80%
+    height: 32px
+
+  .sb-user-search-submit
+    margin: 0 0 0 4px
