--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -403,6 +403,9 @@ body.transition .moment
 
 // Moments that have verses (currently bookmark and highlight)
 
+.moment-votd-verse-wrap
+  margin-bottom: 15px
+
 .moment-verse-wrap
   clear: both
   max-height: 250px
@@ -496,14 +499,14 @@ body.transition .moment
   letter-spacing: -.02em
   width: 300px
 
-.moment-vod-verse
+.moment-votd-verse
   font: 20px "times new roman", times, serif
   letter-spacing: -.035em
-  margin: 0 0 15px
   background-color: #F5F4F3
   +border-radius(5px)
   padding: 15px
   clear: both
+  margin-bottom: 0
 
 .moment-vod-list
   overflow: hidden
